--- a/cnpg-cluster.yaml
+++ b/cnpg-cluster.yaml
@@ -52,4 +52,4 @@ spec:
   output:
     links:
       - title: Download YAML
-        url: ./postgres-cluster.yaml
+        url: ./files/postgres-cluster.yaml
