--- a/cnpg-cluster.yaml
+++ b/cnpg-cluster.yaml
@@ -48,10 +48,8 @@ spec:
       input:
         url: github.com?owner=callmewhatuwant&repo=backstage-test&branch=main&path=skeleton
         targetPath: .
-
+      
   output:
-    text:
-      - title: CNPG Cluster YAML
-        content: |
-          👉 Download:
-          [/api/scaffolder/v2/tasks/{{ steps.generate.taskId }}/files/postgres-cluster.yaml]
+    links:
+      - title: Download YAML
+        url: ./files/postgres-cluster.yaml
