--- a/cnpg-cluster.yaml
+++ b/cnpg-cluster.yaml
@@ -51,5 +51,5 @@ spec:
       
   output:
     links:
-      - title: Download YAML
-        url: ./files/postgres-cluster.yaml
+      - title: Download CNPG YAML
+        url: /api/scaffolder/v2/tasks/{{ task.id }}/files/postgres-cluster.yaml
