--- a/cnpg-cluster.yaml
+++ b/cnpg-cluster.yaml
@@ -15,9 +15,11 @@ spec:
         name:
           type: string
           title: Cluster Name
+          default: test
         namespace:
           type: string
           title: Namespace
+          default: test
 
     - title: Database
       required: [database, owner]
@@ -25,9 +27,11 @@ spec:
         database:
           type: string
           title: Database Name
+          default: test
         owner:
           type: string
           title: Database Owner
+          default: test
 
     - title: Ressourcen
       required: [instances, size]
