--- a/cnpg-cluster.yaml
+++ b/cnpg-cluster.yaml
@@ -52,15 +52,9 @@ spec:
       input:
         url: github.com?owner=callmewhatuwant&repo=backstage-test&branch=main&path=skeleton
         targetPath: .
-
-    - id: publish
-      action: publish:github
-      input:
-        repoUrl: github.com?owner=callmewhatuwant&repo={{ parameters.name }}-cnpg
-        description: Generated CNPG PostgreSQL Cluster
-        defaultBranch: main
       
   output:
-    links:
-      - title: Open generated GitHub repository
-        url: "{{ steps.publish.output.remoteUrl }}"
+    text:
+      - title: Generated CNPG YAML
+        content: |
+          {{ steps.generate.output.files['postgres-cluster.yaml'] | dump }}
