--- a/cnpg-cluster.yaml
+++ b/cnpg-cluster.yaml
@@ -4,30 +4,37 @@ metadata:
   name: cnpg-postgres
   title: CNPG PostgreSQL Cluster
   description: Generate CNPG YAML and publish to GitHub
-
 spec:
   owner: user:guest
   type: service
 
   parameters:
     - title: Basis
-      required: [name, namespace]
+      required: [name, namespace, repoName]
       properties:
         name:
           type: string
+          title: Cluster Name
           default: test
         namespace:
           type: string
+          title: Namespace
           default: test
+        repoName:
+          type: string
+          title: GitHub Repository Name
+          default: cnpg-cluster
 
     - title: Database
       required: [database, owner]
       properties:
         database:
           type: string
+          title: Database Name
           default: test
         owner:
           type: string
+          title: Database Owner
           default: test
 
     - title: Ressourcen
@@ -35,13 +42,15 @@ spec:
       properties:
         instances:
           type: number
+          title: Instances
           default: 2
         size:
           type: string
+          title: Storage Size
           default: 1Gi
 
   steps:
-    - id: generate
+    - id: fetch
       name: Generate CNPG YAML
       action: fetch:template
       input:
@@ -52,11 +61,11 @@ spec:
       name: Publish to GitHub
       action: publish:github
       input:
-        repoUrl: github.com?owner=callmewhatuwant&repo={{ name }}-cnpg
-        description: CNPG PostgreSQL cluster {{ name }}
+        repoUrl: github.com?owner=callmewhatuwant&repo={{ parameters.repoName }}
+        description: CNPG PostgreSQL Cluster YAML
         defaultBranch: main
 
   output:
     links:
-      - title: Open GitHub Repository
-        url: "{{ steps.publish.output.remoteUrl }}"
+      - title: GitHub Repository
+        url: https://github.com/callmewhatuwant/{{ parameters.repoName }}
