--- a/cnpg-cluster.yaml
+++ b/cnpg-cluster.yaml
@@ -64,6 +64,7 @@ spec:
         repoUrl: github.com?owner=callmewhatuwant&repo={{ parameters.repoName }}
         description: CNPG PostgreSQL Cluster YAML
         defaultBranch: main
+        private: false
 
   output:
     links:
