--- a/cnpg-cluster.yaml
+++ b/cnpg-cluster.yaml
@@ -61,4 +61,4 @@ spec:
   output:
     links:
       - title: Open GitHub Repository
-        url: https://github.com/callmewhatuwant/{{ parameters.name }}-cnpg
+        url: https://github.com/callmewhatuwant/repo=cnpg-clusters
