--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,5 +3,5 @@ kind: Location
 metadata:
   name: cnpg-templates
 spec:
-  type: github-discovery
-  target: https://github.com/callmewhatuwant/backstage-test
+  type: url
+  target: https://raw.githubusercontent.com/callmewhatuwant/backstage-test/refs/heads/main/cnpg-cluster.yaml
