--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,5 +3,8 @@ kind: Location
 metadata:
   name: cnpg-templates
 spec:
-  type: url
-  target: https://raw.githubusercontent.com/callmewhatuwant/backstage-test/refs/heads/main/cnpg-cluster.yaml
+  - type: url
+    target: https://raw.githubusercontent.com/callmewhatuwant/backstage-test/refs/heads/main/cnpg-cluster.yaml
+  - type: url
+    target:
+  
