--- a/user.yaml
+++ b/user.yaml
@@ -1,7 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: user:development/guest
+  name: guest
+  namespace: default
 spec:
   profile:
     displayName: Guest User
